--- a/Anime.css
+++ b/Anime.css
@@ -701,7 +701,7 @@ simple rule of add = #more {background-image: url();}
 #more20767 {background-image: url(http://cdn.myanimelist.net/images/anime/10/54931.jpg);}
 #more19613 {background-image: url(http://cdn.myanimelist.net/images/anime/8/58739.jpg);}
 #more14967 {background-image: url(http://cdn.myanimelist.net/images/anime/3/44724.jpg);}
-#more14227 {background-image: url(http://cdn.myanimelist.net/images/anime/4/39779.jpg);}
+#more14227 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/43257.webp);}
 #more6984 {background-image: url(http://cdn.myanimelist.net/images/anime/13/17727.jpg);}
 #more3841 {background-image: url(http://cdn.myanimelist.net/images/anime/6/7632.jpg);}
 #more3713 {background-image: url(http://cdn.myanimelist.net/images/anime/9/25422.jpg);}
@@ -1521,7 +1521,7 @@ simple rule of add = #more {background-image: url();}
 #more147 {background-image: url(http://cdn.myanimelist.net/images/anime/5/10227.jpg);}
 #more50 {background-image: url(http://cdn.myanimelist.net/images/anime/2/17841.jpg);}
 #more31 {background-image: url(http://cdn.myanimelist.net/images/anime/13/22559.jpg);}
-#more25777 {background-image: url(http://cdn.myanimelist.net/images/anime/4/65641.jpg);}
+#more25777 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/80720.webp);}
 #more23359 {background-image: url(http://cdn.myanimelist.net/images/anime/4/70539.jpg);}
 #more21031 {background-image: url(http://cdn.myanimelist.net/images/anime/9/56373.jpg);}
 #more18041 {background-image: url(http://cdn.myanimelist.net/images/anime/10/52079.jpg);}
@@ -7863,7 +7863,7 @@ simple rule of add = #more {background-image: url();}
 #more29765 {background-image: url(http://cdn.myanimelist.net/images/anime/12/71619.jpg);}
 #more29764 {background-image: url(http://cdn.myanimelist.net/images/anime/12/71620.jpg);}
 #more29759 {background-image: url(http://cdn.myanimelist.net/images/anime/6/71529.jpg);}
-#more29758 {background-image: url(http://cdn.myanimelist.net/images/anime/6/71528.jpg);}
+#more29758 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/80197.webp);}
 #more29757 {background-image: url(http://cdn.myanimelist.net/images/anime/5/71524.jpg);}
 #more29756 {background-image: url(http://cdn.myanimelist.net/images/anime/8/71518.jpg);}
 #more29755 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71543.jpg);}
@@ -8107,7 +8107,7 @@ simple rule of add = #more {background-image: url();}
 #more28869 {background-image: url(http://cdn.myanimelist.net/images/anime/4/69667.jpg);}
 #more28861 {background-image: url(http://cdn.myanimelist.net/images/anime/4/69653.jpg);}
 #more28853 {background-image: url(http://cdn.myanimelist.net/images/anime/6/71600.jpg);}
-#more28851 {background-image: url(http://cdn.myanimelist.net/images/anime/5/69629.jpg);}
+#more28851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/80136.webp);}
 #more28843 {background-image: url(http://cdn.myanimelist.net/images/anime/13/69661.jpg);}
 #more28841 {background-image: url(http://cdn.myanimelist.net/images/anime/9/69607.jpg);}
 #more28835 {background-image: url(http://cdn.myanimelist.net/images/anime/9/72297.jpg);}
@@ -8409,7 +8409,7 @@ simple rule of add = #more {background-image: url();}
 #more26251 {background-image: url(http://cdn.myanimelist.net/images/anime/5/66191.jpg);}
 #more26249 {background-image: url(http://cdn.myanimelist.net/images/anime/5/66189.jpg);}
 #more26247 {background-image: url(http://cdn.myanimelist.net/images/anime/13/66187.jpg);}
-#more26243 {background-image: url(http://cdn.myanimelist.net/images/anime/13/72506.jpg);}
+#more26243 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/73474.webp);}
 #more26241 {background-image: url(http://cdn.myanimelist.net/images/anime/9/66171.jpg);}
 #more26239 {background-image: url(http://cdn.myanimelist.net/images/anime/11/66169.jpg);}
 #more26237 {background-image: url(http://cdn.myanimelist.net/images/anime/12/66167.jpg);}
@@ -10534,31 +10534,31 @@ simple rule of add = #more {background-image: url();}
 #more31339 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80271.webp);}
 #more31552 {background-image: url(http://cdn.myanimelist.net/images/anime/3/76082.jpg);}
 #more30544 {background-image: url(http://cdn.myanimelist.net/images/anime/5/76034.jpg);}
-#more31629 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76227.jpg);}
+#more31629 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/81630.webp);}
 #more31326 {background-image: url(http://cdn.myanimelist.net/images/anime/5/75329.jpg);}
 #more30831 {background-image: url(http://cdn.myanimelist.net/images/anime/8/77831.jpg);}
 #more31156 {background-image: url(http://cdn.myanimelist.net/images/anime/10/74863.jpg);}
 #more31442 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76723l.jpg);}
 #more31404 {background-image: url(http://cdn.myanimelist.net/images/anime/2/75871.jpg);}
-#more31414 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76691l.jpg);}
+#more31414 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/75728.webp);}
 #more30503 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75627.jpg);}
 #more30885 {background-image: url(http://cdn.myanimelist.net/images/anime/12/75331.jpg);}
 #more31138 {background-image: url(http://cdn.myanimelist.net/images/anime/9/74787.jpg);}
-#more31240 {background-image: url(http://cdn.myanimelist.net/images/anime/6/76191.jpg);}
+#more31240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79410.webp);}
 #more30749 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74027.jpg);}
-#more31229 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75066.jpg);}
+#more31229 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80953.webp);}
 #more31374 {background-image: url(http://cdn.myanimelist.net/images/anime/3/75467.jpg);}
 #more30363 {background-image: url(http://cdn.myanimelist.net/images/anime/12/76476l.jpg);}
 #more30365 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74864.jpg);}
 #more31380 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76320.jpg);}
 #more30901 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75968.jpg);}
 #more31439 {background-image: url(http://cdn.myanimelist.net/images/anime/7/78548.jpg);}
-#more31765 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76503l.jpg);}
+#more31765 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80708.webp);}
 #more30376 {background-image: url(http://cdn.myanimelist.net/images/anime/5/72823l.jpg);}
 #more17725 {background-image: url(http://cdn.myanimelist.net/images/anime/7/75235l.jpg);}
 #more2026 {background-image: url(http://cdn.myanimelist.net/images/anime/7/73932l.jpg);}
 #more28927 {background-image: url(http://cdn.myanimelist.net/images/anime/9/76632l.jpg);}
-#more31716 {background-image: url(http://cdn.myanimelist.net/images/anime/11/76422l.jpg);}
+#more31716 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/80243.webp);}
 #more31741 {background-image: url(http://cdn.myanimelist.net/images/anime/4/76463l.jpg);}
 #more30382 {background-image: url(http://cdn.myanimelist.net/images/anime/4/74989l.jpg);}
 #more30455 {background-image: url(http://cdn.myanimelist.net/images/anime/5/72868l.jpg);}
@@ -10584,19 +10584,19 @@ simple rule of add = #more {background-image: url();}
 #more32282 {background-image: url(http://cdn.myanimelist.net/images/anime/12/77529l.jpg);}
 #more31080 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77219l.jpg);}
 #more31711 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79330.webp);}
-#more32093 {background-image: url(http://cdn.myanimelist.net/images/anime/4/77159.jpg);}
+#more32093 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/78565.webp);}
 #more32105 {background-image: url(http://cdn.myanimelist.net/images/anime/3/77328.jpg);}
 #more31763 {background-image: url(http://cdn.myanimelist.net/images/anime/10/78624.jpg);}
 #more31914 {background-image: url(http://cdn.myanimelist.net/images/anime/4/77837.jpg);}
-#more32360 {background-image: url(http://cdn.myanimelist.net/images/anime/11/77663.jpg);}
-#more32182 {background-image: url(http://cdn.myanimelist.net/images/anime/11/77308.jpg);}
+#more32360 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/80823.webp);}
+#more32182 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79183.webp);}
 #more31821 {background-image: url(http://cdn.myanimelist.net/images/anime/11/76648l.jpg);}
 #more31478 {background-image: url(http://cdn.myanimelist.net/images/anime/6/76928l.jpg);}
 #more31636 {background-image: url(http://cdn.myanimelist.net/images/anime/8/77833l.jpg);}
 #more32271 {background-image: url(http://cdn.myanimelist.net/images/anime/12/77698l.jpg);}
 #more31163 {background-image: url(http://cdn.myanimelist.net/images/anime/6/77478l.jpg);}
-#more31376 {background-image: url(http://cdn.myanimelist.net/images/anime/13/75473l.jpg);}
-#more31737 {background-image: url(http://cdn.myanimelist.net/images/anime/11/78961.jpg);}
+#more31376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/80039.webp);}
+#more31737 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79107.webp);}
 #more32188 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77324.jpg);}
 #more32828 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78872.jpg);}
 #more31404 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79414.webp);}
@@ -10610,15 +10610,15 @@ simple rule of add = #more {background-image: url();}
 #more32561 {background-image: url(http://cdn.myanimelist.net/images/anime/11/78160.jpg);}
 #more31109 {background-image: url(http://cdn.myanimelist.net/images/anime/3/74773.jpg);}
 #more32215 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77358.jpg);}
-#more32574 {background-image: url(http://cdn.myanimelist.net/images/anime/11/78206.jpg);}
+#more32574 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/72321.webp);}
 #more31952 {background-image: url(http://cdn.myanimelist.net/images/anime/9/78994.jpg);}
 #more30311 {background-image: url(http://cdn.myanimelist.net/images/anime/13/72551.jpg);}
-#more31658 {background-image: url(http://cdn.myanimelist.net/images/anime/7/78823.jpg);}
+#more31658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82893.webp);}
 #more32553 {background-image: url(http://cdn.myanimelist.net/images/anime/8/78149.jpg);}
 #more32447 {background-image: url(http://cdn.myanimelist.net/images/anime/6/77861.jpg);}
 #more32729 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78530.jpg);}
 #more32595 {background-image: url(http://cdn.myanimelist.net/images/anime/9/78254.jpg);}
-#more32615 {background-image: url(http://cdn.myanimelist.net/images/anime/12/78302.jpg);}
+#more32615 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82890.webp);}
 #more32189 {background-image: url(http://cdn.myanimelist.net/images/anime/10/77316.jpg);}
 #more32268 {background-image: url(http://cdn.myanimelist.net/images/anime/2/77744.jpg);}
 #more31772 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76519.jpg);}
@@ -10637,3 +10637,44 @@ simple rule of add = #more {background-image: url();}
 #more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79814.webp);}
 #more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
 #more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82867.webp);}
+#more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79221.webp);}
+#more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79999.webp);}
+#more31798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78466.webp);}
+#more32937 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82521.webp);}
+#more32380 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80582.webp);}
+#more33263 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/81588.webp);}
+#more32869 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82691.webp);}
+#more32949 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/82926.webp);}
+#more32900 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82194.webp);}
+#more33487 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80599.webp);}
+#more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/78489.webp);}
+#more33724 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/81106.webp);}
+#more33674 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80988.webp);}
+#more32962 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81186.webp);}
+#more34134 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82141.webp);}
+#more34161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/82168.webp);}
+#more33091 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/80753.webp);}
+#more30695 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/81036.webp);}
+#more32951 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/79058.webp);}
+#more32542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/78134.webp);}
+#more34102 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82915.webp);}
+#more33834 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81464.webp);}
+#more33775 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82256.webp);}
+#more33286 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81413.webp);}
+#more33036 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82537.webp);}
+#more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79229.webp);}
+#more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/81909.webp);}
+#more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80143.webp);}
+#more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79651.webp);}
+#more34176 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82428.webp);}
+
+
+
+
+
+
+
+
+
+
+
