--- a/Manga.css
+++ b/Manga.css
@@ -1,3 +1,6 @@
+/*
+Manga Tumbnail
+*/
 #more11 {background-image: url(http://cdn.myanimelist.net/images/manga/2/37561.jpg);}
 #more12 {background-image: url(http://cdn.myanimelist.net/images/manga/3/31762.jpg);}
 #more21 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54453.jpg);}
