Manga.css update
By Bill69Qc

--- a/Manga.css
+++ b/Manga.css
@@ -1,7 +1,7 @@
 /*
 Manga Tumbnail
 */
-#more11 {background-image: url(http://cdn.myanimelist.net/images/manga/2/37561.jpg);}
+#more11 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/104889.webp);}
 #more12 {background-image: url(http://cdn.myanimelist.net/images/manga/3/31762.jpg);}
 #more21 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54453.jpg);}
 #more13 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55539.jpg);}
@@ -12,7 +12,7 @@ Manga Tumbnail
 #more618 {background-image: url(http://cdn.myanimelist.net/images/manga/3/31173.jpg);}
 #more9711 {background-image: url(http://cdn.myanimelist.net/images/manga/1/53181.jpg);}
 #more47 {background-image: url(http://cdn.myanimelist.net/images/manga/3/32291.jpg);}
-#more2 {background-image: url(http://cdn.myanimelist.net/images/manga/3/26544.jpg);}
+#more2 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/157931.webp);}
 #more30 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27223.jpg);}
 #more908 {background-image: url(http://cdn.myanimelist.net/images/manga/3/45583.jpg);}
 #more583 {background-image: url(http://cdn.myanimelist.net/images/manga/5/25982.jpg);}
@@ -88,7 +88,7 @@ Manga Tumbnail
 #more45 {background-image: url(http://cdn.myanimelist.net/images/manga/2/51695.jpg);}
 #more94 {background-image: url(http://cdn.myanimelist.net/images/manga/1/36739.jpg);}
 #more22651 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62105.jpg);}
-#more18597 {background-image: url(http://cdn.myanimelist.net/images/manga/1/46549.jpg);}
+#more18597 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/137971.webp);}
 #more463 {background-image: url(http://cdn.myanimelist.net/images/manga/5/673.jpg);}
 #more1102 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55641.jpg);}
 #more23 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5616.jpg);}
@@ -96,7 +96,7 @@ Manga Tumbnail
 #more13949 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27687.jpg);}
 #more3872 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6311.jpg);}
 #more44 {background-image: url(http://cdn.myanimelist.net/images/manga/4/21132.jpg);}
-#more31499 {background-image: url(http://cdn.myanimelist.net/images/manga/1/66501.jpg);}
+#more31499 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/181212.webp);}
 #more14790 {background-image: url(http://cdn.myanimelist.net/images/manga/2/98589.jpg);}
 #more11652 {background-image: url(http://cdn.myanimelist.net/images/manga/1/92071.jpg);}
 #more5911 {background-image: url(http://cdn.myanimelist.net/images/manga/3/51021.jpg);}
@@ -174,7 +174,7 @@ Manga Tumbnail
 #more22519 {background-image: url(http://cdn.myanimelist.net/images/manga/2/64985.jpg);}
 #more105 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62925.jpg);}
 #more1339 {background-image: url(http://cdn.myanimelist.net/images/manga/4/17963.jpg);}
-#more70 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55361.jpg);}
+#more70 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/55347.webp);}
 #more8878 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15100.jpg);}
 #more745 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56177.jpg);}
 #more447 {background-image: url(http://cdn.myanimelist.net/images/manga/2/53191.jpg);}
@@ -187,7 +187,7 @@ Manga Tumbnail
 #more55 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4971.jpg);}
 #more7627 {background-image: url(http://cdn.myanimelist.net/images/manga/5/25944.jpg);}
 #more48 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55441.jpg);}
-#more21419 {background-image: url(http://cdn.myanimelist.net/images/manga/3/50417.jpg);}
+#more21419 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/178011.webp);}
 #more14236 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40027.jpg);}
 #more401 {background-image: url(http://cdn.myanimelist.net/images/manga/1/56649.jpg);}
 #more768 {background-image: url(http://cdn.myanimelist.net/images/manga/5/55511.jpg);}
@@ -195,7 +195,7 @@ Manga Tumbnail
 #more418 {background-image: url(http://cdn.myanimelist.net/images/manga/2/4560.jpg);}
 #more1456 {background-image: url(http://cdn.myanimelist.net/images/manga/1/22109.jpg);}
 #more20593 {background-image: url(http://cdn.myanimelist.net/images/manga/3/62199.jpg);}
-#more3102 {background-image: url(http://cdn.myanimelist.net/images/manga/3/82182.jpg);}
+#more3102 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/112021.webp);}
 #more513 {background-image: url(http://cdn.myanimelist.net/images/manga/4/25030.jpg);}
 #more1444 {background-image: url(http://cdn.myanimelist.net/images/manga/1/23000.jpg);}
 #more84 {background-image: url(http://cdn.myanimelist.net/images/manga/3/14195.jpg);}
@@ -291,7 +291,7 @@ Manga Tumbnail
 #more98 {background-image: url(http://cdn.myanimelist.net/images/manga/2/11203.jpg);}
 #more2146 {background-image: url(http://cdn.myanimelist.net/images/manga/5/19698.jpg);}
 #more13277 {background-image: url(http://cdn.myanimelist.net/images/manga/4/38446.jpg);}
-#more25132 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40461.jpg);}
+#more25132 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/185978.webp);}
 #more3715 {background-image: url(http://cdn.myanimelist.net/images/manga/3/16312.jpg);}
 #more3645 {background-image: url(http://cdn.myanimelist.net/images/manga/2/4058.jpg);}
 #more615 {background-image: url(http://cdn.myanimelist.net/images/manga/2/60629.jpg);}
@@ -456,7 +456,7 @@ Manga Tumbnail
 #more1079 {background-image: url(http://cdn.myanimelist.net/images/manga/1/23572.jpg);}
 #more24172 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40317.jpg);}
 #more1962 {background-image: url(http://cdn.myanimelist.net/images/manga/2/67295.jpg);}
-#more33699 {background-image: url(http://cdn.myanimelist.net/images/manga/2/81454.jpg);}
+#more33699 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/120981.webp);}
 #more25081 {background-image: url(http://cdn.myanimelist.net/images/manga/4/41861.jpg);}
 #more891 {background-image: url(http://cdn.myanimelist.net/images/manga/2/36333.jpg);}
 #more8947 {background-image: url(http://cdn.myanimelist.net/images/manga/2/60311.jpg);}
@@ -1802,7 +1802,7 @@ Manga Tumbnail
 #more1845 {background-image: url(http://cdn.myanimelist.net/images/manga/2/36024.jpg);}
 #more16686 {background-image: url(http://cdn.myanimelist.net/images/manga/1/24651.jpg);}
 #more10527 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14147.jpg);}
-#more24836 {background-image: url(http://cdn.myanimelist.net/images/manga/1/39955.jpg);}
+#more24836 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/116343.webp);}
 #more2869 {background-image: url(http://cdn.myanimelist.net/images/manga/1/39639.jpg);}
 #more10809 {background-image: url(http://cdn.myanimelist.net/images/manga/1/52663.jpg);}
 #more13992 {background-image: url(http://cdn.myanimelist.net/images/manga/3/19903.jpg);}
@@ -3147,7 +3147,7 @@ Manga Tumbnail
 #more2050 {background-image: url(http://cdn.myanimelist.net/images/manga/2/2239.jpg);}
 #more18458 {background-image: url(http://cdn.myanimelist.net/images/manga/1/28276.jpg);}
 #more1626 {background-image: url(http://cdn.myanimelist.net/images/manga/5/27014.jpg);}
-#more33327 {background-image: url(http://cdn.myanimelist.net/images/manga/3/60953.jpg);}
+#more33327 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/114037.webp);}
 #more2081 {background-image: url(http://cdn.myanimelist.net/images/manga/2/2271.jpg);}
 #more11589 {background-image: url(http://cdn.myanimelist.net/images/manga/2/15717.jpg);}
 #more7263 {background-image: url(http://cdn.myanimelist.net/images/manga/1/23929.jpg);}
@@ -6566,7 +6566,7 @@ Manga Tumbnail
 #more7071 {background-image: url(http://cdn.myanimelist.net/images/manga/4/35821.jpg);}
 #more675 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5231.jpg);}
 #more15779 {background-image: url(http://cdn.myanimelist.net/images/manga/2/22996.jpg);}
-#more56805 {background-image: url(http://cdn.myanimelist.net/images/manga/2/98689.jpg);}
+#more56805 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/120529.webp);}
 #more7920 {background-image: url(http://cdn.myanimelist.net/images/manga/1/41190.jpg);}
 #more2821 {background-image: url(http://cdn.myanimelist.net/images/manga/2/22561.jpg);}
 #more533 {background-image: url(http://cdn.myanimelist.net/images/manga/2/3366.jpg);}
@@ -9090,7 +9090,7 @@ Manga Tumbnail
 #more32989 {background-image: url(http://cdn.myanimelist.net/images/manga/5/61435.jpg);}
 #more1524 {background-image: url(http://cdn.myanimelist.net/images/manga/3/79051.jpg);}
 #more23030 {background-image: url(http://cdn.myanimelist.net/images/manga/1/37297.jpg);}
-#more33031 {background-image: url(http://cdn.myanimelist.net/images/manga/2/60401.jpg);}
+#more33031 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/137237.webp);}
 #more23571 {background-image: url(http://cdn.myanimelist.net/images/manga/4/45939.jpg);}
 #more13846 {background-image: url(http://cdn.myanimelist.net/images/manga/1/19637.jpg);}
 #more36631 {background-image: url(http://cdn.myanimelist.net/images/manga/1/66145.jpg);}
@@ -15048,7 +15048,7 @@ Manga Tumbnail
 #more15703 {background-image: url(http://cdn.myanimelist.net/images/manga/2/22886.jpg);}
 #more3672 {background-image: url(http://cdn.myanimelist.net/images/manga/2/41024.jpg);}
 #more39261 {background-image: url(http://cdn.myanimelist.net/images/manga/1/69777.jpg);}
-#more56165 {background-image: url(http://cdn.myanimelist.net/images/manga/2/97801.jpg);}
+#more56165 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/130745.webp);}
 #more20587 {background-image: url(http://cdn.myanimelist.net/images/manga/1/32730.jpg);}
 #more51051 {background-image: url(http://cdn.myanimelist.net/images/manga/2/90161.jpg);}
 #more26220 {background-image: url(http://cdn.myanimelist.net/images/manga/3/42116.jpg);}
@@ -24954,6 +24954,22 @@ Manga Tumbnail
 #more57305 {background-image: url(http://cdn.myanimelist.net/images/manga/3/99525.jpg);}
 #more57337 {background-image: url(http://cdn.myanimelist.net/images/manga/1/99557.jpg);}
 #more57339 {background-image: url(http://cdn.myanimelist.net/images/manga/1/99559.jpg);}
+#more85781 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/148949.webp);}
+#more85968 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/173075.webp);}
+#more81117 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/145997.webp);}
+#more93222 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/178146.webp);}
+#more74339 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/151905.webp);}
+#more73571 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/159136.webp);}
+
+
+
+
+
+
+
+
+
+
 
 
 
